--- a/sidebar.css
+++ b/sidebar.css
@@ -1,4 +1,3 @@
-/* sidebar.css */
 #highlight-sidebar {
     position: fixed;
     right: -300px;
@@ -137,9 +136,65 @@
     background-color: #333;
     color: white !important;
     cursor: pointer;
-    
+
 }
 
 .website-item:hover {
     background-color: #ddd;
+}
+
+/* CSS for YouTube notes */
+#youtube-notes-container .note-item {
+    background-color: #1c1c1c;
+    margin-bottom: 10px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.note-item .title {
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #f5f5f5;
+    font-size: 1em;
+}
+
+.note-item .text {
+    margin-bottom: 10px;
+    color: #ccc;
+    font-size: 0.9em;
+}
+
+.note-item .time {
+    font-size: 0.8em;
+    color: #aaa;
+}
+
+.note-item .actions {
+    display: none;
+    /* Hide actions by default */
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #2c2c2c;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.note-item:hover .actions {
+    display: flex;
+    /* Show actions on hover */
+}
+
+.note-item a {
+    color: #007BFF;
+    text-decoration: none;
+}
+
+.note-item a:hover {
+    text-decoration: underline;
 }
